# nobipy

./: .gitignore  Readme.md  setup.cfg  setup.py
.github/workflows/: pypi.yml
src/nobipy/: __init__.py  const.py  exceptions.py  main.py
