[metadata]
name = nobipy-amiwrpremium
version = 0.0.2
author = amiwrpremium
author_email = amiwrpremium@example.com
description = Nobitex cryptocurrency exchange python sdk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amiwrpremium/nobipy
project_urls =
    Bug Tracker = https://github.com/amiwrpremium/nobipy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src